# suply-chain-optimization-algorithm-comparison

./: CMakeLists.txt  README.md  generate_benchmark.py  main.cpp
algorithms/: branch_and_bound.py  genetic_algo.py  simplex.py  tabu_search.py
data/: benchmark_large.json
